--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -1,32 +1,39 @@
 name: check_syntax
+
 on:
- push:
-   branches:
-     - main
+  push:
+    branches:
+      - main
+
 jobs:
   check-syntax:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
         python-version: [3.9, 3.10, 3.11]
-        
+
     steps:
     - name: Set up Python
-      uses: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
-      - name: Install flake8
-        run: |
-          python -m pip install flake8
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
 
-      - name: Display Python version
-        run: |
-          python --version
-      - name: Run flake8
-        run: |
+    - name: Install flake8
+      run: |
+        python -m pip install flake8
+
+    - name: Display Python version
+      run: |
+        python --version
+
+    - name: Run flake8
+      run: |
         flake8
-        
-  
+
+      run: |
+        flake8
