--- a/.github/workflows/check_python.yml
+++ b/.github/workflows/check_python.yml
@@ -5,7 +5,7 @@ on:
       - check_python_version
 jobs:
   check-python-version:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Set up Python 3.11
         uses: actions/setup-python@v2
