--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -3,8 +3,8 @@ name: check_syntax
 on:
   push:
     branches:
+      - check_syntax
       - main
-
 jobs:
   check-syntax:
     runs-on: windows-latest
