--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Display Python version
       run: |
         python --version
+
+    - name: Run unittest
+      run: python -m unittest test
