--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -1,38 +1,39 @@
-name: Check Syntax
+name: Check Syntax Workflow
 
 on:
   push:
     branches:
-      
-check_syntax
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  syntax-checker:
+  syntax-check:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: [3.9, 3.10, 3.11]
 
     steps:
-    
-uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-    
-name: Set up Python ${{ matrix.python-version }}
-    uses: actions/setup-python@v2
-    with:
-      python-version: ${{ matrix.python-version }}
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
 
-    
-name: Install dependencies
-    run: |
-      python -m pip install --upgrade pip
-      pip install flake8
+    - name: Install flake8
+      run: |
+        pip install flake8
 
-    
-name: Display Python version
-    run: python --version
+    - name: Display Python version
+      run: |
+        python --version
 
-    
-name: Check code with flake8
-    run: flake8 .
+    - name: Run flake8
+      run: |
+        flake8 .
