--- a/.github/workflows/check_synatx2.yml
+++ b/.github/workflows/check_synatx2.yml
@@ -1,4 +1,4 @@
-name: Main 
+name: Check Syntax Workflow
 
 on:
   push:
@@ -6,43 +6,37 @@ on:
       - main
 
 jobs:
-  build:
+  syntax-check:
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
-        python: [3.9, 3.11]
+        os: [ubuntu-latest, windows-latest]
+        python-version: [3.9, 3.11]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python }}
-        architecture: x64
+        python-version: ${{ matrix.python-version }}
+        exclude: ${{ matrix.python-version == '3.10' && matrix.os == 'ubuntu-latest' }}
 
     - name: Update pip
       run: |
         python -m pip install --upgrade pip
 
-    - name: Install dependencies
+    - name: Install flake8 and unittest
       run: |
-        python -m pip install flake8
-    - name: Install dependencies2
-      run: |
-        python -m pip install unittest2
+        pip install flake8
+        pip install unittest
 
     - name: Display Python version
       run: |
         python --version
 
-    - name: Check code style with flake8
+    - name: Run flake8
       run: |
         flake8 .
 
     - name: Run unittest
       run: |
-        python -m unittest discover -v
+        python -m unittest discover -s tests -p '*_test.py'
