--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -1,10 +1,7 @@
-name: check_syntax
+name: Check Syntax
 
 on:
   push:
-    branches:
-      - check_syntax
-  pull_request:
     branches:
       - check_syntax
 
@@ -36,4 +33,4 @@ jobs:
 
     - name: Run flake8
       run: |
-        flake8
+        flake8 .
