--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -20,17 +20,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
+      run: python -m pip install --upgrade pip
 
-    - name: Install flake8
+    - name: Install_flake8
       run: |
-        pip install flake8
+       python -m pip install flake8
 
     - name: Display Python version
       run: |
         python --version
 
     - name: Run flake8
-      run: |
-        flake8 .
+      run: flake8 
