--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -1,39 +1,35 @@
-name: Check Syntax Workflow
+name: Check Syntax
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
       - check_syntax
 
 jobs:
-  syntax-check:
+  check_syntax:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         python-version: [3.9, 3.10, 3.11]
 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
-
-    - name: Install flake8
-      run: |
-        pip install flake8
+        # Optionally update pip
+        # pip-version: latest
 
     - name: Display Python version
+      run: python --version
+
+    - name: Install dependencies
       run: |
-        python --version
+        python -m pip install --upgrade pip
+        pip install flake8
 
     - name: Run flake8
-      run: |
-        flake8 .
+      run: flake8
