--- a/.github/workflows/check_syntax.yml
+++ b/.github/workflows/check_syntax.yml
@@ -6,29 +6,30 @@ on:
       - check_syntax
 
 jobs:
-  syntax-check:
+  check_syntax:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         python-version: [3.9, 3.10, 3.11]
 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Update pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install_flake8
-      run: |
-       python -m pip install flake8
+        # Optionally update pip
+        # pip-version: latest
 
     - name: Display Python version
+      run: python --version
+
+    - name: Install dependencies
       run: |
-        python --version
+        python -m pip install --upgrade pip
+        pip install flake8
 
     - name: Run flake8
-      run: flake8 
+      run: flake8
